# axon

./: .gitignore  Cargo.toml  README.md  jfc-transcript.md
apps/repo-scout/: Cargo.toml
apps/repo-scout/src/: main.rs
crates/axon-core/: Cargo.toml
crates/axon-core/src/: breaker.rs  compartment.rs  edge.rs  event.rs  gate.rs  graph.rs  id.rs  lib.rs  limit.rs  plasticity.rs  profile.rs  replay.rs  report.rs  rng.rs  route.rs  routing.rs  runtime.rs  runtime_async.rs  signal.rs  stop.rs  working_memory.rs
crates/axon-core/tests/: async_cancel.rs  async_runtime.rs  circuit_breaker.rs  compartment.rs  cost_budget.rs  disinhibit.rs  fan_out.rs  modulated_selection.rs  phase_gate.rs  plasticity.rs  replay.rs  routing_profile.rs  selection_margin.rs  signed_edges.rs  stall_guard.rs  stop_token.rs  topology.rs  working_memory.rs
crates/axon-exec/: Cargo.toml
crates/axon-exec/src/: agent.rs  bridge.rs  learning.rs  lib.rs  plan_stack.rs  planning.rs  risk.rs  skill.rs
crates/axon-exec/tests/: bridge.rs  hierarchical_plan.rs  learning_loop.rs  llm_replanner.rs  plan_stack.rs  planning.rs  prefrontal.rs  replan.rs  risk_gate.rs  routed_loop.rs  skill_library.rs
crates/axon-memory/: Cargo.toml
crates/axon-memory/src/: lib.rs
crates/axon-memory/tests/: hippocampus.rs  persistence.rs
crates/axon-modulate/: Cargo.toml
crates/axon-modulate/src/: lib.rs
crates/axon-modulate/tests/: neuromodulators.rs
crates/axon-predict/: Cargo.toml
crates/axon-predict/src/: lib.rs
crates/axon-predict/tests/: cerebellum.rs
crates/axon-provider/: Cargo.toml
crates/axon-provider/src/: lib.rs  openai.rs
crates/axon-provider/tests/: seam.rs
crates/axon-tools/: Cargo.toml
crates/axon-tools/src/: async_module.rs  command.rs  error.rs  fs.rs  git.rs  lib.rs  module.rs  outcome.rs
crates/axon-tools/tests/: async_tools.rs  sensorimotor.rs  tool_outcome.rs
crates/axon-workspace/: Cargo.toml
crates/axon-workspace/src/: lib.rs
crates/axon-workspace/tests/: global_workspace.rs  persistence.rs
docs/research/: README.md
docs/research/notes/: 10_frontier_substrate.md
examples/: basic_loop.rs  dream.rs  integrated_loop.rs  learning_loop.rs  llm_planner.rs  neuro_stack.rs
src/: error.rs  lib.rs  module.rs  report.rs  route.rs  routing.rs  runtime.rs  signal.rs
tests/: api_validation.rs  core_runtime.rs
