[package]
name = "axon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Typed signal routing core for Axon."
repository.workspace = true

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
