[package]
name = "axon-predict"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cerebellar prediction and verification layer for Axon."
repository.workspace = true

[dependencies]
axon-core = { path = "../axon-core", version = "=0.1.0" }

[lints]
workspace = true
