[package]
name = "axon-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM provider seam for Axon: the typed boundary model calls live behind."
repository.workspace = true

[dependencies]
axon-core = { path = "../axon-core", version = "=0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
