[package]
name = "axon-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded global workspace layer for Axon."
repository.workspace = true

[dependencies]
axon-core = { path = "../axon-core", version = "=0.1.0" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[features]
serde = ["dep:serde", "axon-core/serde"]

[lints]
workspace = true
